# POS_SFML_Dama

./: CMakeLists.txt  main.cpp
Classes/: Board.cpp  Board.h  DraggedPawn.cpp  DraggedPawn.h  Game.cpp  Game.h  Pawn.cpp  Pawn.h  Player.cpp  Player.h  Square.cpp  Square.h
